# FastFood

./: .gitignore  CMakeLists.txt  FastFood_SV_50_2022.sln  README.md
FastFood_SV_50_2022/: BurgerPart.h  Camera.cpp  ColorMesh.cpp  ColorMesh.h  EBO.cpp  EBO.h  FastFood_SV_50_2022.vcxproj  FastFood_SV_50_2022.vcxproj.filters  Main.cpp  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Texture.cpp  Texture.h  Utils.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h  callbacks.cpp  callbacks.h  cameraClass.h  color.frag  color.vert  default.frag  default.vert  glad.c  key_callback.cpp  patty.frag  patty.vert  shaderClass.cpp  ui.frag  ui.vert
FastFood_SV_50_2022/Libraries/include/glad/: glad.h
FastFood_SV_50_2022/Libraries/lib/: glfw3.lib
FastFood_SV_50_2022/model/bottom_bun/: license.txt  scene.gltf
FastFood_SV_50_2022/model/cheese/: license.txt  scene.gltf
FastFood_SV_50_2022/model/kitchen/: license.txt  scene.gltf
FastFood_SV_50_2022/model/onion/: license.txt  scene.gltf
FastFood_SV_50_2022/model/patty/: license.txt  scene.gltf
FastFood_SV_50_2022/model/plate/: license.txt
FastFood_SV_50_2022/model/tomato/: license.txt  scene.gltf
FastFood_SV_50_2022/model/top_bun/: license.txt  scene.gltf
FastFood_SV_50_2022/x64/Debug/: FastFood_SV_50_2022.exe.recipe  FastFood_SV_50_2022.ilk  vc143.idb
FastFood_SV_50_2022/x64/Debug/FastFood.f2b9b3d4.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  FastFood_SV_50_2022.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
